use example-image not a as the example

--- a/graphics-pln/exmplgrf.tex
+++ b/graphics-pln/exmplgrf.tex
@@ -1,9 +1,9 @@
 
 \input graphicx
 
-\includegraphics{a}
+\includegraphics{example-image}
 
-\includegraphics[scale=2]{a}
+\includegraphics[scale=2]{example-image}
 
 hello\rotatebox[origin=c]{180}{hello}hello
 
