guard \protected for latex3/latex2e#208

--- a/graphics-pln/color.tex
+++ b/graphics-pln/color.tex
@@ -4,6 +4,10 @@
 \input miniltx
 
 \def\Gin@driver{dvips.def}
+\let\@color@protected\protected
+\expandafter\@gobble\csname protected\endcsname
+
 \input color.sty
 
+\let\protected\@color@protected
 \resetatcatcode
