--- a/graphics-pln/exmplpfg.tex
+++ b/graphics-pln/exmplpfg.tex
@@ -1,4 +1,7 @@
 
+% using psfrag example eps
+% /usr/local/texlive/2019/texmf-dist/doc/latex/psfrag/example.eps
+
 \input psfrag
 
 First without psfrag:
