--- a/miniltx.tex
+++ b/miniltx.tex
@@ -2,7 +2,7 @@
 %%%
 %%% Parts of LaTeX: Slightly changed/simplified in places.
 %%% Changes 
-%%%    Copyright 1996-2019 David Carlisle LaTeX3 Project
+%%%    Copyright 1996-2020 David Carlisle LaTeX3 Project
 %%% Original Code
 %%%    Copyright 1993-1996 LaTeX3 Project and original authors
 %%%
@@ -10,7 +10,7 @@
 %%%  or any other LaTeX related support address.
 %%%
 %%% Problems should be reported as issues at
-%%% https://github.com/davidcarlisle/dpctex/tree/master/graphics-pln
+%%% https://github.com/davidcarlisle/graphics-pln/issues
 %%% 
 %%%
 %%% This file may be distributed under the terms of the LPPL, see
@@ -26,6 +26,7 @@
 %  2016/08/17 fix catcode @ handling (again), document github address [DC]
 %  2017/06/01 assorted updates to cover updated latex drivers
 %  2019/07/20 more updates for latex drivers
+%  2020/03/02 move to own git repository and add newcommand fix from issue #2
 
 \edef\resetatcatcode{\catcode`\noexpand\@\the\catcode`\@\relax}
 
