code comment for \newcommand fix.

--- a/miniltx.tex
+++ b/miniltx.tex
@@ -247,6 +247,7 @@
     {\def\reserved@a{\renew@command\reserved@a}}%
    \reserved@a}%
 
+% Missing \x@protect definition added 2020/03/02
 \def\x@protect#1{%
   \ifx\protect\@typeset@protect\else
     \@x@protect#1%
