--- a/graphicx.tex
+++ b/graphicx.tex
@@ -29,14 +29,14 @@
 \ifx\detokenize\@undefined
   \def\detokenize#1{#1}
 \fi
-\let\GRAPHICS@protected
+\let\GRAPHICS@protected\protected
 \ifx\protected\@undefined
   \let\protected\relax
 \fi
 \input graphicx.sty
 \let\detokenize\GRAPHICS@detokenize
 \let\protected\GRAPHICS@protected
-
+\show\protected
 \resetatcatcode
 
 
