--- a/miniltx.tex
+++ b/miniltx.tex
@@ -2,7 +2,7 @@
 %%%
 %%% Parts of LaTeX: Slightly changed/simplified in places.
 %%% Changes 
-%%%    Copyright 1996-2020 David Carlisle LaTeX3 Project
+%%%    Copyright 1996-2021 David Carlisle LaTeX3 Project
 %%% Original Code
 %%%    Copyright 1993-1996 LaTeX3 Project and original authors
 %%%
@@ -27,6 +27,7 @@
 %  2017/06/01 assorted updates to cover updated latex drivers
 %  2019/07/20 more updates for latex drivers
 %  2020/03/02 move to own git repository and add newcommand fix from issue #2
+%  2021/11/15 Define \@backslashchar for issue #4
 
 \edef\resetatcatcode{\catcode`\noexpand\@\the\catcode`\@\relax}
 
@@ -75,6 +76,8 @@
 \long\def\@firstofone#1{#1}
 \long\def\@firstoftwo#1#2{#1}
 \long\def\@secondoftwo#1#2{#2}
+
+\edef\@backslashchar{\expandafter\@gobble\string\\}
 
 \def\NeedsTeXFormat#1{\@ifnextchar[\@needsf@rmat\relax}
 \def\@needsf@rmat[#1]{}
